--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,21 @@
-API_ID=123456
-API_HASH=your_api_hash
-BOT_TOKEN=your_bot_token
+# --- TELEGRAM BOT CREDENTIALS ---
+API_ID=123456                      # Your API_ID from https://my.telegram.org
+API_HASH=your_api_hash            # Your API_HASH from https://my.telegram.org
+BOT_TOKEN=your_bot_token          # Telegram Bot Token from @BotFather
 
-AI_MODE=openai
-OPENAI_API_KEY=your_openai_key
-OPENROUTER_API_KEY=your_openrouter_key
-DEEPAI_API_KEY=your_deepai_key
+# --- OWNER DETAILS ---
+OWNER_ID=123456789                # Your Telegram numeric user ID
 
-OWNER_ID=123456789
-DEFAULT_MOOD=romantic
-ALLOW_NSFW=false
+# --- AI ENGINE SETTINGS ---
+AI_MODE=openai                    # Options: openai, openrouter, deepai
+OPENAI_API_KEY=your_openai_key    # OpenAI key for ChatGPT (if using AI_MODE=openai)
+OPENROUTER_API_KEY=your_openrouter_key  # OpenRouter key (if using AI_MODE=openrouter)
+DEEPAI_API_KEY=your_deepai_key    # DeepAI key (if using AI_MODE=deepai)
+
+# --- DEFAULT BOT BEHAVIOUR ---
+DEFAULT_MOOD=romantic             # Options: romantic, serious, funny, etc.
+ALLOW_NSFW=false                  # Set to true or false (use with caution in groups)
+
+# --- (OPTIONAL) EXTRAS ---
+# SUPPORT_CHAT=@your_support_group
+# MONGO_DB_URL=your_mongodb_url_if_any
