--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
 # --- TELEGRAM BOT CREDENTIALS ---
-API_ID=123456                      # Your API_ID from https://my.telegram.org
-API_HASH=your_api_hash            # Your API_HASH from https://my.telegram.org
-BOT_TOKEN=your_bot_token          # Telegram Bot Token from @BotFather
+API_ID=27209067                                # Your API_ID from https://my.telegram.org
+API_HASH=0bb2571bd490320a5c9209d4bf07902e      # Your API_HASH from https://my.telegram.org
+BOT_TOKEN=8114095450:AAGbp2hn2emTtXpKjr5qXnvlCvNsfaMJ1Xg  # Telegram Bot Token from @BotFather
 
 # --- OWNER DETAILS ---
-OWNER_ID=123456789                # Your Telegram numeric user ID
+OWNER_ID=7487670897                            # Your Telegram numeric user ID
 
 # --- AI ENGINE SETTINGS ---
-AI_MODE=openai                    # Options: openai, openrouter, deepai
-OPENAI_API_KEY=your_openai_key    # OpenAI key for ChatGPT (if using AI_MODE=openai)
-OPENROUTER_API_KEY=your_openrouter_key  # OpenRouter key (if using AI_MODE=openrouter)
-DEEPAI_API_KEY=your_deepai_key    # DeepAI key (if using AI_MODE=deepai)
+AI_MODE=openai                                 # Options: openai, openrouter, deepai
+OPENAI_API_KEY=sk-               # 🔐 Your OpenAI key here
+OPENROUTER_API_KEY=              # 🔐 Your OpenRouter key here
+DEEPAI_API_KEY=quickstart-       # 🔐 Your DeepAI key here
 
 # --- DEFAULT BOT BEHAVIOUR ---
-DEFAULT_MOOD=romantic             # Options: romantic, serious, funny, etc.
-ALLOW_NSFW=false                  # Set to true or false (use with caution in groups)
+DEFAULT_MOOD=romantic                          # Options: romantic, serious, funny, etc.
+ALLOW_NSFW=false                                # Set to true or false (use with caution in groups)
 
 # --- (OPTIONAL) EXTRAS ---
-# SUPPORT_CHAT=@your_support_group
-# MONGO_DB_URL=your_mongodb_url_if_any
+SUPPORT_CHAT=@Ufff_Ye_Aadaye               # Your support group (optional)
+MONGO_DB_URL=mongodb+srv://knight4563:knight4563@cluster0.a5br0se.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0  # Optional MongoDB (for stats/sessions)
