--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,50 @@
+# Core libraries
 pyrogram==2.0.106
-tgcrypto==1.2.5
-aiohttp==3.9.5
-requests==2.31.0
-python-dotenv==1.0.1
-pytz==2024.1
-pyzipper==0.3.6
-pydub==0.25.1
-yt-dlp==2024.07.04
-openai==1.30.1
+tgcrypto
+python-dotenv
+pymongo
+aiohttp
+requests
+openai
+deepai
+pillow
+pyzipper
+youtube_dl
+yt_dlp
+bs4
 googletrans==4.0.0rc1
-SpeechRecognition==3.10.1
-pyaudio==0.2.14
-Pillow==10.3.0
-python-telegram-bot==20.7
-beautifulsoup4==4.12.3
-pyee==11.0.1
-fuzzywuzzy==0.18.0
-pynacl==1.5.0
-emoji==2.12.1
+gTTS
+SpeechRecognition
+pydub
+moviepy
+PyPDF2
+pytube
+python-telegram-bot
+emoji
+beautifulsoup4
+selenium
+pyscreenshot
+pyautogui
+python-barcode
+reportlab
+translate
+fpdf
+langdetect
+textblob
+nltk
+fuzzywuzzy
+python-Levenshtein
+numexpr
+schedule
+psutil
+opencv-python
+tqdm
+pyshorteners
+pywhatkit
+python-magic
+scikit-learn
+pyqrcode
+pyaes
+py7zr
+rarfile
+telegraph
